# material-color-utilities-pure-python

./: .gitignore  README.md  pyproject.toml
material_color_utilities_python/: __init__.py
material_color_utilities_python/blend/: blend.py
material_color_utilities_python/hct/: cam16.py  hct.py  viewing_conditions.py
material_color_utilities_python/palettes/: core_palette.py  tonal_palette.py
material_color_utilities_python/quantize/: lab_point_provider.py  quantizer_celebi.py  quantizer_map.py  quantizer_wsmeans.py  quantizer_wu.py
material_color_utilities_python/scheme/: scheme.py
material_color_utilities_python/score/: score.py
material_color_utilities_python/types/: theme_type.py
material_color_utilities_python/utils/: color_utils.py  image_utils.py  math_utils.py  string_utils.py  theme_utils.py
tests/: test_theme_functions.py
